--- a/cd.client/package.json
+++ b/cd.client/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "jsonreferenceresolver": "^0.1.2",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
+    "react-bootstrap": "^2.10.9",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
